# 220FinalProject-SortingGame

./: ArrayManager.cpp  CMakeLists.txt  Card.cpp  Card.h  Deck.h  Game.cpp  Game.h  README.md  Sorter.h  main.cpp
include/: ArrayUtil.h  Card.h  Constants.h  Deck.h  Game.h  GameState.h  Hand.h  Node.h  WebRequests.h  WinServer.h
src/: Game.cpp  main.cpp
src/elements/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp
src/server/: GameState.cpp  WebRequests.cpp  WinServer.cpp
src/structures/: ArrayManager.cpp  Node.cpp
